# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: hexlet-check.yml  linter.yml
gendiff/: __init__.py  cli.py  diff.py  file_parser.py  gendiff.py  statuses.py  tree.py
gendiff/format/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  run.py
htmlcov/: gendiff___init___py.html  gendiff_gendiff_py.html  gendiff_scripts___init___py.html  gendiff_scripts_gendiff_py.html  index.html  status.json
tests/: test_diff.py
tests/fixtures/: file1.yml  file2.yml  result_json.json  result_json.txt  result_stylish.txt
