[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Show difference betwene two files"
authors = ["Anton <zavr35rus@gmail.com>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.3"

[tool.poetry.scripts]
gendiff="gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.2"
coverage = "^7.10.7"
black = "^25.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
